# Hackflight

./: .gitignore  LICENSE  Makefile  README.md  foo  hackflight.ino  keywords.txt  library.properties  mac-addresses  pointers  rpyt.txt  snn_path.makefile  startup_stm32f10x_md_gcc.s  xtensa
arduino/: README
attic/: AttoPilot Calibration.ods  nazeread.py  pids  serial.cpp
attic/rust-examples/BetaFpvF405Sbus/: BetaFpvF405Sbus.ino  Cargo.toml  Makefile  logic.cpp
attic/rust-examples/BetaFpvF405Sbus/.cargo/: config.toml
attic/rust-examples/BetaFpvF405Sbus/src/: anglepid.rs  datatypes.rs  filters.rs  imu.rs  lib.rs  math.rs  mixers.rs  utils.rs
betafpv/: Makefile  betafpv.ino  cli-dump.txt  ekf.cpp  imu.cpp  pinout.txt
blender/: .gitignore  custom.blend  diy.blend  diyquad.blend
bolt/: .gitignore  Kconfig  Makefile  README.md  bolt.ino  comms.cpp  ekf.cpp  imu.cpp  led.cpp  makefile.include  motors.cpp  newimu.cpp  opticalflow.cpp  semaphore_example.cpp  task2.cpp  uart.cpp  zranger.cpp
c/: README.md  comms.c  header.c  header.h  motors.c  newserial.c  serial.c  serialize.c
cad/: biggity.brd  biggity.sch  combo.sch  fc.brd  fc.sch
cf2/: Makefile  cf2.ino  imu.cpp  motors.cpp  uart.cpp  vapplication.c
cfbolt/: Makefile  cfbolt.ino
client/: .gitignore  client.py  gamepad.py  newclient.py  oldclient.py  plot.py  plotlog.py  proxy.py  radiomaster.py  spikes.py  state.py  telemetry.py
clients/: btsupport.py  client.py  gamepad.py  smirfpad.py  smirfstate.py  smirfsupport.py  spikes.py  spikes.sh  state.py
common/: Makefile  readserial.cpp  serial.cpp  serial.hpp  serialtest.cpp  sockets.cpp  sockets.hpp  socketutils.cpp  socketutils.hpp  writeserial.py
crazyflie/: .gitignore  Kconfig  Makefile  comms.cpp  crazyflie.ino  ekf.cpp  free_rtos_task.hpp  hackflight.cpp  imu.cpp  kalman.cpp  led.cpp  linalg.cpp  math.cpp  motors.cpp  opticalflow.cpp  thread.cpp  uart_pins.h  zranger.cpp
darwinfpv/: makefile.include
diy/: .gitignore  Makefile  comms.cpp  diy.ino  imu.cpp  led.cpp  motors.cpp  opticalflow.cpp  uart.cpp  zranger.cpp
dongle/: Makefile  dongle.ino
dsmdongle/: dsmdongle.ino
dsmxblue/: .gitignore  dsmxblue.py  messages.json  msppg.py
dynamics/: .gitignore  Dynamics.hpp  Dynamics.hs  Makefile  Tester.hs  tester.cpp
eagle/: .gitignore  mpu6050-turtle.brd
eagle-cad/: .gitignore
eigen/: Makefile  eigen.ino
espnow/: espnow_helper.hpp
estimators/: Makefile  ekf.cpp  estimators.ino  imu.cpp  plot.py
examples/: README.md  makefile.include
examples/BetaFpvF405Sbus/: BetaFpvF405Sbus.ino  Cargo.toml  Makefile  README.md  cli-dump  dma_irq.c  glue.cpp  hardware_init.c  logic.cpp  main.cpp  makelink  quadlogic.cpp  quadlogic.h
examples/BetaFpvF405Sbus/src/: lib.rs
extras/stateviz/: 2dviz.py  3dviz.py  arrowhead.stl  blueviz.sh  debug.py  fileviz.sh  mockstate.txt  package.xml  rstateviz.sh  stateviz.py
extras/stateviz/cmake/: statevizConfig-version.cmake  statevizConfig.cmake
feather/: Makefile  comms.cpp  feather.ino  imu.cpp  led.cpp  zranger.cpp
firmware/: Makefile  baro.cpp  baro.hpp  board.cpp  board.h  board.hpp  board_naze.c  board_naze.cpp  common.hpp  config.h  config.hpp  crossplatform.h  debug.hpp  extras.cpp  extras.hpp  filters.cpp  filters.hpp  hackflight-core.cpp  hackflight.cpp  hackflight.hpp  hover.cpp  hover.hpp  imu.cpp  imu.hpp  mixer.c  mixer.cpp  mixer.hpp  msp.c  msp.cpp  msp.hpp  mw.c  mw.cpp  mw.h  mw.hpp  navigate.cpp  navigate.hpp  naze.c  pid.cpp  pid.hpp  position.cpp  (+17 more)
flight/: mixer.cpp  mixer.hpp  mw.cpp  pid.cpp
gcs/: .gitignore  Makefile  README  README.md  blescanner.py  buildgcs.bat  comms.py  debugging.py  dialog.py  gcs.py  gcs.sh  imu.py  main.py  messages.json  messages.py  motors.py  msp.py  mspparser.py  receiver.py  setup.py  tkcompat.py  tmp  tx.py
generic/: Makefile  comms.cpp  generic.ino  imu.cpp  motors.cpp  opticalflow.cpp
goku/: Makefile  goku.ino  imu.cpp  pinout.txt
haskell/: .gitignore  Bluetooth.hs  Clock.hs  CoreTask.hs  Demands.hs  Dynamics.hs  MSP.hs  (+28 more)
oldrust/: Cargo.toml  README.md
oldrust/src/: datatypes.rs
oldrust/src/mixers/: fixedpitch.rs
oldrust/src/mixers/fixedpitch/: quadxbf.rs
oldrust/src/pids/: altitude.rs  rate.rs
rust/: Cargo.toml  README.md
rust/Multicopter_Server/: Cargo.toml
rust/Multicopter_Server/src/: launch.rs  launch_controller.rs  main.rs  mixers.rs  multicopter_server.rs
rust/examples/: hello.rs  multisim.rs  newmain.rs  traits.rs
rust/hackflight/: Cargo.toml
rust/hackflight/src/: main.rs
rust/rust/: Cargo.toml
rust/rust/src/: hackflight.rs  lib.rs  main.rs  pids.rs
rust/src/: clock.rs  filters.rs  hackflight.rs  lib.rs  main.rs  mixers.rs  newaltpid.rs  newanglepid.rs  newpids.rs  pids.rs  utils.rs
rust/src/mixers/: quadxbf.rs
rust/src/newpids/: angle.rs
rust/src/pids/: althold.rs  altitude.rs  angle.rs  rate.rs  yaw.rs
sim/examples/phantom/: Makefile  Phantom.hs  phantom.cabal
sim/examples/phantom/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
(+6399 files in other folders)
