[package]
name = "hackflight"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Simple flight-control software for makers in Rust"
documentation = "https://github.com/simondlevy/Hackflight"
repository = "https://github.com/simondlevy/Hackflight/rust"
readme = "README.md"

[lib]
name = "hackflight"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
