# Copyright (c) 2023 Simon D. LEvy
#
# MIT License

[package]
authors = ["Simon D. Levy"]
edition = "2018"
readme = "README.md"
name = "ardurust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
#panic-itm = "0.4.1"

[lib]
name = "math"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
