<?xml version="1.0"?>
<package>
  <name>stateviz</name>
  <version>0.10.3</version>
  <description>The stateviz package</description>

  <maintainer email="simon.d.levy@gmail.com">Simon D. levy</maintainer>

  <license>BSD</license>
  <url type="website">https://githbu.com/simondlevy/Hackflight</url>

  <author >Simon D. Levy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
