#   Copyright (c) 2022 Simon D. Levy
#
#   This file is part of Hackflight.
#
#   Hackflight is free software: you can redistribute it and/or modify it under
#   the terms of the GNU General Public License as published by the Free
#   Software Foundation, either version 3 of the License, or (at your option)
#   any later version.
#
#   Hackflight is distributed in the hope that it will be useful, but WITHOUT
#   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
#   FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
#   more details.
#
#   You should have received a copy of the GNU General Public License along with
#   Hackflight. If not, see <https://www.gnu.org/licenses/>.

[package]
authors = ["Simon D. Levy"]
edition = "2018"
readme = "README.md"
name = "ardurust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
micromath = "1.0.1"

# Uncomment for the panic example.
#panic-itm = "0.4.1"

[lib]
name = "hackflight"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1 # better optimizations
debug = false 
lto = true # better optimizations
