cabal-version:      2.4
name:               phantom
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
executable phantom
    main-is:          Phantom.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      copilot
    hs-source-dirs:   ../../../haskell
                      ../../../haskell/sensors
                      ../../../haskell/pidcontrollers
                      ../../../haskell/dynamics
    default-language: Haskell2010
